<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitePrimary">

    <TextView
        android:id="@+id/txt_view_login_fake_logo"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:background="@color/greenPrimary"
        android:gravity="center"
        android:lines="1"
        android:padding="16dp"
        android:text="@string/login_view_fake_logo"
        android:textColor="@color/whitePrimary"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/mcv_content_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_view_login_primary"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_view_login_fake_logo">

        <TextView
            android:id="@+id/txt_view_login_card_title"
            style="@style/Title_Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_view_card_title"
            android:layout_margin="16dp"/>

        <ImageView
            android:id="@+id/img_view_login_card_icon"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:srcCompat="@drawable/ic_bank"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:rotation="-30"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_view_login_title"
        style="@style/Title_Extra_Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/login_view_title"
        app:layout_constraintBottom_toBottomOf="@+id/txt_view_login_fake_logo"
        app:layout_constraintStart_toEndOf="@+id/txt_view_login_fake_logo"
        app:layout_constraintTop_toTopOf="@+id/txt_view_login_fake_logo" />

    <TextView
        android:id="@+id/txt_view_login_contact"
        style="@style/Title_Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:text="@string/login_view_contact_us"
        android:textColor="@color/bluePrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_view_login_primary"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/bluePrimary"
        android:text="@string/login_view_button_primary"
        android:textAllCaps="false"
        android:textColor="@color/whitePrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_view_login_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>